--- a/locales/ja.json
+++ b/locales/ja.json
@@ -279,7 +279,7 @@
       "cart_error": "カートをアップデートするときにエラーが発生しました。もう一度お試しください。",
       "cart_quantity_error_html": "このアイテムは{{ quantity }}個しかカートに追加することができません。",
       "taxes_and_shipping_policy_at_checkout_html": "税、ディスカウント、および<a href=\"{{ link }}\">配送料</a>はチエックアウト時に計算されます",
-      "taxes_included_but_shipping_at_checkout": "税込みで、配送料とディスカウントはチェックアアウト時に計算されます",
+      "taxes_included_but_shipping_at_checkout": "税込みで、配送料とディスカウントはチェックアウト時に計算されます",
       "taxes_included_and_shipping_policy_html": "税込。<a href=\"{{ link }}\">配送料</a>とディスカウントはチエックアウト時に計算されます",
       "taxes_and_shipping_at_checkout": "税、ディスカウント、および配送料はチエックアウト時に計算されます",
       "headings": {
@@ -294,7 +294,7 @@
         "title": "アカウントをお持ちですか?",
         "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">ログイン</a>することで、チェックアウトがスピーディーに行えます。"
       },
-      "estimated_total": "見積もり合計",
+      "estimated_total": "合計",
       "new_estimated_total": "新たな推定総額"
     },
     "footer": {
